--- a/navigation/app/src/main/AndroidManifest.xml
+++ b/navigation/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Navigation">
         <activity
+            android:name=".DestinationActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
