--- a/camerax/app/build.gradle
+++ b/camerax/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     implementation "androidx.camera:camera-video:${camerax_version}"
     implementation "androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
+
+    implementation 'pub.devrel:easypermissions:3.0.0'
 }
